test/carehub-1.1.0/objects/QuestionnaireQuestion__c/QuestionnaireQuestion__c.object-meta.xml
<CustomObject>
    <label>Questionnaire Question</label>
    <nameField>
        <displayFormat>QQ-{0000}</displayFormat>
        <label>Questionnaire Question Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Questionnaire Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>