test/carehub-1.1.0/objects/QuestionnaireQuestion__c/fields/IsRequired__c.field-meta.xml
<CustomField>
    <fullName>IsRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Required</label>
    <type>Checkbox</type>
</CustomField>