test/carehub-1.1.0/objects/QuestionnaireQuestion__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <label>Question Name</label>
    <referenceTo>Question__c</referenceTo>
    <relationshipLabel>Questionnaire Questions</relationshipLabel>
    <relationshipName>QuestionnaireQuestion</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>