test/carehub-1.1.0/objects/QuestionnaireQuestion__c/fields/Questionnaire__c.field-meta.xml
<CustomField>
    <fullName>Questionnaire__c</fullName>
    <label>Questionnaire Name</label>
    <referenceTo>Questionnaire__c</referenceTo>
    <relationshipLabel>Questionnaire Questions</relationshipLabel>
    <relationshipName>QuestionnaireQuestions</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>